--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
         display:flex;
         flex-direction:row;
     }
+	img{
+        width: 33%;
+    }
 </style>
 <script>
     async function mostrarAnimeFactsRestApi (nome){
