--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         display:flex;
         flex-direction:row;
     }
-	img{
+    img{
         width: 33%;
     }
 </style>
@@ -40,8 +40,8 @@
     const imagemRick = `<img src="${imgRick}">`;
         document.body.insertAdjacentHTML('afterbegin', imagemRick);
 }
-
-    rick(1)
+    var aleatorio = Math.floor(Math.random() * 200);
+    rick(aleatorio)
 
 
 
